--- a/src/config.properties
+++ b/src/config.properties
@@ -13,12 +13,14 @@ system.city=
 
 #URL\u8fde\u63a5
 jdbc.url=jdbc:mysql://127.0.0.1/cheefull?useUnicode=true&characterEncoding=utf8
+#jdbc.url=jdbc:mysql://127.0.0.1/cheefull?useUnicode=true&characterEncoding=utf8
+#jdbc.url=jdbc:mysql://88.nnxyy.cc/cheefull?useUnicode=true&characterEncoding=utf8
 
 #\u6570\u636e\u5e93\u7528\u6237\u540d
 jdbc.username=root
 
 #\u6570\u636e\u5e93\u5bc6\u7801
-jdbc.password=123456
+#jdbc.password=123456
 #jdbc.password=15078880003
 
 #\u8fde\u63a5\u65b9\u5f0f\uff1a0\uff0c\u9ed8\u8ba4\u65b9\u5f0f\u8fde\u63a5\uff1b2\uff0c\u4f5c\u4e3a\u7ba1\u7406\u5458\u8fde\u63a5\uff1b4\uff0c\u4f5c\u4e3a\u64cd\u4f5c\u5458\u8fde\u63a5
